Improve security, logging, and data loading logic
Refactored DataLoader to be idempotent and avoid duplicate data creation. Enhanced JwtAuthenticationFilter and CardController with debug logging. Updated SecurityConfig to allow public GET endpoints, added CORS configuration, and enabled method-level security. Added DebugController for health checks. Improved JwtService to support both Base64 and hex secret keys. Enabled debug logging in application.properties for easier diagnostics.